--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-12"></div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="col-6"></div>
                 <div class="col-remaining"></div>
             </div>
-        </div>
+        </div> -->
 
     </body>
 </html>
